// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Iconfont :props :name 1`] = `
<i
  class="t-icon t-icon-close"
/>
`;

exports[`Iconfont :props :size 1`] = `
<div>
  <i
    class="t-icon t-icon-close t-size-xs"
  />
  <i
    class="t-icon t-icon-close t-size-s"
  />
  <i
    class="t-icon t-icon-close"
  />
  <i
    class="t-icon t-icon-close t-size-l"
  />
  <i
    class="t-icon t-icon-close t-size-xl"
  />
  <i
    class="t-icon t-icon-close"
    style="font-size: 25px;"
  />
  <i
    class="t-icon t-icon-close"
    style="font-size: 2em;"
  />
</div>
`;

exports[`Iconfont :props :tag 1`] = `
<div>
  <i
    class="t-icon t-icon-close"
  />
  <span
    class="t-icon t-icon-close"
  />
  <div
    class="t-icon t-icon-close"
  />
  <p
    class="t-icon t-icon-close"
  />
</div>
`;

exports[`Iconfont :props :url array 1`] = `
<div>
  <i
    class="t-icon home"
  />
</div>
`;

exports[`Iconfont :props :url string 1`] = `
<div>
  <i
    class="t-icon home"
  />
</div>
`;
